--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/chrome": "^0.0.203",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
     "@vitejs/plugin-react": "^2.2.0",
-    "typescript": "^4.6.4",
+    "eslint": "^8.28.0",
+    "eslint-config-alloy": "^4.7.0",
+    "eslint-plugin-react": "^7.31.11",
+    "sass": "^1.56.1",
+    "typescript": "^4.9.3",
     "vite": "^3.2.3"
   }
 }
